--- a/config/coc-settings.json
+++ b/config/coc-settings.json
@@ -95,9 +95,9 @@
       }
     }
   },
-  "python.linting.pylintEnabled": false,
-  "python.linting.flake8Enabled": false,
   "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true,
+  "python.linting.flake8Enabled": true,
   "python.linting.pep8Enabled": true,
 
 }
