--- a/config/coc-settings.json
+++ b/config/coc-settings.json
@@ -99,5 +99,30 @@
   "python.linting.pylintEnabled": true,
   "python.linting.flake8Enabled": true,
   "python.linting.pep8Enabled": true,
-
+    "coc-actions.hideCursor": true,
+    "coc-actions.showActionKind": true,
+    "coc-actions.useCursorLine": false,
+"smartf.timeout": 2000,
+"smartf.jumpOnTrigger":true,
+"smartf.wordJump":true,
+"smartf.charactersIgnoreByNavigator":[],
+"zi.enable":true,
+"zi.patterns": {
+  "": [],
+  "javascript": [
+    "^\\s*\\/\\/",
+    "^\\s*\\/\\*",
+    "^\\s*\\*"
+  ],
+  "typescript": [
+    "^\\s*\\/\\/",
+    "^\\s*\\/\\*",
+    "^\\s*\\*"
+  ],
+  "markdown": [],
+  "vim": [
+    "^\\s*\\\""
+  ],
+  "gitcommit": []
+}
 }
