优化使用体验

--- a/config/tasks.ini
+++ b/config/tasks.ini
@@ -36,6 +36,7 @@ command:go="$(VIM_PATHNOEXT)"
 command:python=python "$(VIM_FILENAME)"
 command:make=make -f "$(VIM_FILENAME)" run
 command:emake=emake -e "$(VIM_FILENAME)"
+command:html=google-chrome "$(VIM_FILENAME)"
 command:javascript=node "$(VIM_FILENAME)"
 command:sh=bash "$(VIM_FILENAME)"
 command:lua=lua "$(VIM_FILENAME)"
@@ -58,3 +59,7 @@ output=terminal
 notify=echo
 save=2
 listed=0
+
+#notify=echo silent=1输出到quickfix不弹出
+#notify=echo pos=tab/TAB focus=0 输出到tab，不切换焦点
+#notify=echo pos=hide 不需要看输出
